# simple-blackjack

./: .gitignore  BlackJack.sln  BlackJack.vcxproj  BlackJack.vcxproj.filters  BlackJackUI.vcxproj  BlackJackUI.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  README.md  build.sh  clean.sh  marcadores.txt  setup.sh
blackjack/: CMakeLists.txt
blackjack/include/: gestorGraficos.h
blackjack/src/: mano.cpp  mazo.cpp  source.cpp  utiles.cpp
source/: CMakeLists.txt  UI.cpp  carta.cpp  carta.h  dealer.cpp  dealer.h  gestorConsola.cpp  gestorConsola.h  gestorGraficos.cpp  gestorGraficos.h  juego.cpp  juego.h  jugador.cpp  jugador.h  jugadorGenerico.cpp  jugadorGenerico.h  listaCarta.cpp  listaCarta.h  listaJugador.cpp  listaJugador.h  mano.cpp  mano.h  mazo.cpp  mazo.h  nodoCarta.cpp  nodoCarta.h  nodoJugador.cpp  nodoJugador.h  source.cpp  utiles.cpp  utiles.h
source/blackjack/: CMakeLists.txt
source/blackjack/include/: carta.h  gestorConsola.h  gestorGraficos.h  juego.h  utiles.h
source/blackjack/src/: carta.cpp  gestorConsola.cpp  gestorGraficos.cpp  juego.cpp  mano.cpp  utiles.cpp
source/include/: dealer.h  gestorConsola.h  juego.h  jugador.h  listaCarta.h  listaJugador.h  mano.h  mazo.h  utiles.h
source/src/: dealer.cpp  gestorConsola.cpp  gestorGraficos.cpp  jugador.cpp  listaCarta.cpp  listaJugador.cpp  nodoJugador.cpp
