# CMakeLists files in this project can
# refer to the root source directory of the project as ${HELLO_SOURCE_DIR} and
# to the root binary directory of the project as ${HELLO_BINARY_DIR}.
cmake_minimum_required (VERSION 3.3)
project (BlackJack CXX)



set(CMAKE_CXX_STANDARD 14)


add_subdirectory ("source")





